# frank_esp32

./: .gitignore  partitions.csv  sdkconfig  sdkconfig.old
.cache/clangd/index/: blink_example_main.c.F9D01233CF361464.idx  led_strip.h.589E3E4C57DE9897.idx  led_strip_api.c.C114D146AE83C046.idx  led_strip_interface.h.31643D3940164DD2.idx  led_strip_rmt.h.D754D914E83D0D49.idx  led_strip_rmt_dev.c.003DA30C43B7B322.idx  led_strip_rmt_encoder.c.0A933A84FB57A8B3.idx  led_strip_rmt_encoder.h.BD234FCFABEBC5FF.idx  led_strip_spi.h.02C34C304852ECF4.idx  led_strip_spi_dev.c.7845F87EE7A8C652.idx  led_strip_types.h.1F99BCDA73881F11.idx
main/: CMakeLists.txt  Kconfig.projbuild  display.c  display.cpp  display.h  font_lxwk.c  hardware.c  hardware.h  idf_component.yml  main.c  network.c  network.h  network_provider_cellular.c  network_provider_cellular.h  network_provider_wifi.c  network_provider_wifi.h
main/proto/: packet.pb-c.c  packet.pb-c.h
proto/: packet.proto
