idf_component_register(
SRCS
        "main.c"
        "display.c"
        "hardware.c"
        "network.c"
        "network_provider_cellular.c"
        "network_provider_wifi.c"
        "proto/packet.pb-c.c"
        "display.h"
        "hardware.h"
        "network.h"
        "network_provider_cellular.h"
        "network_provider_wifi.h"
        "proto/packet.pb-c.h"
        "font_lxwk.c"
INCLUDE_DIRS
        "."
        "./proto"
PRIV_REQUIRES
        spi_flash
        esp_wifi
        nvs_flash
        esp_driver_gpio
        esp_driver_i2s
        esp_driver_i2c
        esp_lcd
        tcp_transport
        esp_netif
        log
)
